Tests/context/invalid/class11.java
class A {
    int x;

}
{
    A a = new A();
    a.instanceof(int);
}